<resources>
    <string name="app_name">Anti Covid</string>

    <string name="button_call_now">Call Now</string>
    <string name="button_send_sms">Send SMS</string>
    <string name="button_search">Search</string>

    <string name="error_parse_json">Type not supported</string>
    <string name="error_get_data_api">First param should not be null, or you forgot passing one</string>
    <string name="error_cash_class">Class not support</string>

    <string name="msg_notification_on">You have turned on notifications</string>
    <string name="msg_notification_off">You have turned off notification</string>
    <string name="msg_search_fail">No result!</string>
    <string name="msg_connection_fail">Please check your internet connection!</string>
    <string name="msg_no_data_available">No data available\u0020</string>
    <string name="msg_notification_location_update">Alerts %d infected people in the area you live</string>
    <string name="msg_gps_question">Your GPS seems to be disabled, do you want to turn it on to use this feature?</string>
    <string name="msg_gps_result">GPS is not turned on!</string>
    <string name="msg_no_select_status">You have not selected a status!</string>
    <string name="msg_no_latest_news">No latest news!</string>

    <string name="radio_button_vietnamese">Vietnamese</string>
    <string name="radio_button_worlds">Worlds</string>
    <string name="radio_button_en">EN</string>
    <string name="radio_button_vn">VN</string>

    <string name="text_add_users_here">Add users here</string>
    <string name="text_all_you_need">All you need</string>
    <string name="text_is_stay_at_home">is stay at home</string>
    <string name="text_case_update">Case Update</string>
    <string name="text_see_detail">See Detail</string>
    <string name="text_infected">Infected</string>
    <string name="text_death">Death</string>
    <string name="text_recovered">Recovered</string>
    <string name="text_loading">Loading…</string>
    <string name="text_information">%,d</string>
    <string name="text_plus_information">+%,d</string>
    <string name="text_sort">Sort</string>
    <string name="text_hint_search_country">Search country…</string>
    <string name="text_country_code">(%s)</string>
    <string name="text_symptoms">Symptoms</string>
    <string name="text_prevention_tips">Prevention tips</string>
    <string name="text_are_you_fill_sick">Are you fill sick?</string>
    <string name="text_head_notification">Have new %d infected</string>
    <string name="text_body_notification">, %d death</string>
    <string name="text_end_notification">, %d recovered in Viet Nam</string>
    <string name="text_got_it">Got it!</string>
    <string name="text_headache_content">You feel dizzy or nauseous.</string>
    <string name="text_cough_content">You feel sore throat, difficulty breathing, or chest pain.</string>
    <string name="text_fever_content">You feel tired, have a rash or become red or purple in your fingers or toes.</string>
    <string name="text_wear_mask_content">When going out on the street you should wear a mask, so keep a safe distance when communicating.</string>
    <string name="text_wash_hands_content">"Wash your hands often, use soap and water or an alcohol-based hand sanitizer."</string>
    <string name="text_agree">Yes</string>
    <string name="text_diagree">No</string>
    <string name="text_notice">Notice!</string>
    <string name="text_infor">Notification!</string>
    <string name="text_content_infor">You should turn on notifications to receive the latest information about Covid-19 disease. Want to turn on notifications?</string>
    <string name="text_notice_content">If you turn off notifications you will not receive the latest information about the Covid-19 epidemic. Do you want to turn off notifications?</string>
    <string name="text_empty_edittext">Please enter search keywords!</string>
    <string name="text_description_question">If you feel sick with any of covid-19 symptoms please call or SMS us immediately for help.</string>
    <string name="text_content_rag">When you cough or sneeze, cover your nose and mouth with a tissue or with your elbow.</string>
    <string name="text_statistic_char_by_week">Statistical chart by week</string>
    <string name="text_area_warning">Dangerous area in VietNam</string>
    <string name="text_char_new_infected">Number of new infections</string>
    <string name="text_char_new_death">Number of new deaths</string>
    <string name="text_char_new_recovered">Number of new recovery</string>
    <string name="text_char_monday">Monday</string>
    <string name="text_char_tuesday">Tuesday</string>
    <string name="text_char_wednesday">Wednesday</string>
    <string name="text_char_thursday">Thursday</string>
    <string name="text_char_friday">Friday</string>
    <string name="text_char_saturday">Saturday</string>
    <string name="text_char_sunday">Sunday</string>
    <string name="text_select_day">select day</string>
    <string name="text_from_date">"From:\u0020"</string>
    <string name="text_to_date">\n\n"To:\u0020"</string>
    <string name="text_date_time">Date:\u0020</string>
    <string name="text_treatments">Treatments</string>
    <string name="text_treatments_content">
        - To date, there is no specific vaccine or drug for COVID-19. Scientists are still working on a treatment and will verify it through clinical trials.
        \n\n- If you have mild symptoms and no other symptoms, quarantine yourself and contact your medical facility or the COVID-19 information helpline for advice.
    </string>
    <string name="text_prevention_content">Protect yourself and those around you by getting information and taking appropriate precautions.</string>
    <string name="text_symptoms_content">COVID-19 affects people in different ways. Most people infected with the virus will have mild to moderate symptoms and will recover without hospitalization. </string>
    <string name="text_name">Name</string>
    <string name="text_detecting_location">Detecting Location</string>
    <string name="text_being_treated">Being treated</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_detail_counties_screen">Detail Countries</string>
    <string name="title_news_screen">News</string>
    <string name="title_notification">Update</string>
    <string name="title_headche">Headache</string>
    <string name="title_cough">Cough</string>
    <string name="title_fever">Fever</string>
    <string name="title_wear_face_mask">Wear face mask</string>
    <string name="title_wash_your_hands">Wash your hands</string>
    <string name="title_rag">Rag</string>
    <string name="title_avoid_close_contact">Avoid close contact</string>
    <string name="title_content_avoid_close_contact">Keep a safe distance from anyone coughing or sneezing.</string>
    <string name="title_newest_news">Newest</string>
    <string name="title_highlight_news">Featured</string>
    <string name="title_domestic_news">domestic</string>
    <string name="title_world_news">World</string>
    <string name="title_name">Name:</string>
    <string name="title_age">Age:</string>
    <string name="title_detecting_location">Detecting Location:</string>
    <string name="title_time">Time:</string>
    <string name="title_address">Address:</string>
    <string name="title_place">Place:</string>
    <string name="title_dialog_date">Select a date range</string>
    <string name="title_notification_location_update">Warning</string>
    <string name="title_summary">Summary</string>
    <string name="title_status">Status</string>
    <string name="title_case_information">List of cases</string>
    <string name="title_select_place">Select place:</string>
    <string name="title_select_fields">Select status:</string>
    <string name="title_search_filter">Search filter</string>

    <string name="fine_location_permission_rationale">The fine location permission is needed.</string>
    <string name="fine_permission_denied_explanation">Fine location permission was denied, but is needed.</string>

    <string name="background_location_permission_rationale">The background location permission is needed.</string>
    <string name="background_permission_denied_explanation">Background location permission was denied but needed.</string>

    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="fine_location_access_rationale_title_text">Locate your position!</string>
    <string name="fine_location_access_rationale_details_text">For this feature to work, please approve access to your location via the button below.</string>

    <string name="background_location_access_rationale_title_text">Improve location accuracy!</string>
    <string name="background_location_access_rationale_details_text">In order to be able to pinpoint the closest distance to the cases around you, ensure your safety and those around you.</string>

    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>

    <string name="batched_location_updates">Batched location updates</string>
    <string name="emptyLocationDatabaseMessage">To start receiving location updates, please click the button below!</string>

    <string name="sms_content">Recipients: Deputy Head of Editorial Department, TS.BS. Ha Anh Duc, Chief of Office of the Ministry of Health.\n\nContent:</string>
    <string name="title_detail_case_information">Case details</string>
    <string name="title_sex">Sex:</string>
    <string name="text_status">Status:</string>
    <string name="title_place_point">Place point to:</string>
    <string name="title_description">Description:</string>
    <string name="title_place_went_to">The place went to</string>

    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
</resources>