<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.googlemap.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/actionToSymptomDialog"
            app:destination="@id/symptomDialog" />
    </fragment>

    <fragment
        android:id="@+id/navigation_statistic"
        android:name="com.example.googlemap.ui.statistic.StatisticFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics">

        <action
            android:id="@+id/actionToDetailCountryFragment"
            app:destination="@id/detailCountryFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.googlemap.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/detailCountryFragment"
        android:name="com.example.googlemap.ui.detail.DetailCountryFragment"
        android:label="DetailCountryFragment"
        tools:layout="@layout/fragment_detail_countries" />

    <dialog
        android:id="@+id/symptomDialog"
        android:name="com.example.googlemap.ui.dialog.SymptomDialog"
        android:label="SymptomDialog"
        tools:layout="@layout/dialog_preview">

        <argument
            android:name="bundleSymptom"
            app:argType="com.example.googlemap.data.model.Symptom" />
    </dialog>
</navigation>