<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="size"
            type="Integer" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:expandedTitleTextAppearance="@style/TextAppearance.App.Title.Expanded"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@string/title_case_information">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_200"
                    android:adjustViewBounds="true"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@null"
                    android:src="@drawable/img_virus"
                    app:layout_collapseMode="parallax" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbarCaseInformation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/menu_case_information"
                    app:navigationIcon="@drawable/ic_baseline_arrow_white_24"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_5"
                android:gravity="center"
                android:text="@string/text_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_18"
                app:drawableEndCompat="@drawable/background_seperate_text"
                app:layout_constraintBottom_toBottomOf="@id/textViewDetectingLocation"
                app:layout_constraintEnd_toStartOf="@+id/textViewDetectingLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewDetectingLocation" />

            <TextView
                android:id="@+id/textViewDetectingLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_5"
                android:gravity="center"
                android:text="@string/text_detecting_location"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toStartOf="@+id/textViewStatus"
                app:layout_constraintStart_toEndOf="@+id/textViewName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/title_status"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_18"
                app:drawableStartCompat="@drawable/background_seperate_text"
                app:layout_constraintBottom_toBottomOf="@+id/textViewDetectingLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewDetectingLocation"
                app:layout_constraintTop_toTopOf="@+id/textViewDetectingLocation" />

            <View
                android:id="@+id/viewTop"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewDetectingLocation" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/msg_search_fail"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_25"
                android:visibility="@{size == 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewTop" />

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/pullToRefresh"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewTop">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewCaseInformation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="@{size > 0 ? View.VISIBLE : View.GONE}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
