<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_action_bar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_100"
                app:expandedTitleGravity="center|bottom"
                app:expandedTitleTextAppearance="@style/TextAppearance.App.Title.Expanded"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@string/title_detail_counties_screen">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbarDetailScreen"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_baseline_arrow_white_24"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@null"
                    android:src="@drawable/img_virus"
                    app:layout_collapseMode="parallax" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_15"
                android:elevation="@dimen/dp_2">

                <EditText
                    android:id="@+id/editTextSearch"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/background_edt_search"
                    android:hint="@string/text_hint_search_country"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="@dimen/dp_20"
                    android:paddingEnd="@dimen/dp_20"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/buttonSearch"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="0dp"
                    android:background="@drawable/background_btn_search"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_search_white_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/textViewInfected"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_5"
                android:background="@drawable/background_text_infected"
                android:elevation="@dimen/dp_2"
                android:gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/text_infected"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/textViewDeath"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDeath"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_5"
                android:background="@drawable/background_text_death"
                android:elevation="@dimen/dp_2"
                android:gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/text_death"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/textViewRecovered"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textViewInfected"
                app:layout_constraintTop_toTopOf="@+id/textViewInfected" />

            <TextView
                android:id="@+id/textViewRecovered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@drawable/background_text_recovered"
                android:elevation="@dimen/dp_2"
                android:gravity="center"
                android:padding="@dimen/dp_5"
                android:text="@string/text_recovered"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textViewDeath"
                app:layout_constraintTop_toTopOf="@+id/textViewDeath" />

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/pullToRefresh"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewSeperate">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewCountries"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <View
                android:id="@+id/viewSeperate"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_0_1"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewInfected" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
